unpackaged/main/default/objects/CS_Flow_Primary_Category_Setting__mdt/CS_Flow_Primary_Category_Setting__mdt.object-meta.xml
<CustomObject>
    <label>CS Flow Primary Category Setting</label>
    <pluralLabel>CS Flow Primary Category Settings</pluralLabel>
</CustomObject>