unpackaged/main/default/objects/CS_Flow_Primary_Category_Setting__mdt/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <label>Countries</label>
    <type>TextArea</type>
</CustomField>