unpackaged/main/default/objects/CS_Flow_Primary_Category_Setting__mdt/fields/CS_Flow_Type_Category_Setting__c.field-meta.xml
<CustomField>
    <fullName>CS_Flow_Type_Category_Setting__c</fullName>
    <label>CS Flow Type Category Setting</label>
    <referenceTo>CS_Flow_Type_Category_Setting__mdt</referenceTo>
    <relationshipLabel>CS Flow Primary Category Settings</relationshipLabel>
    <relationshipName>CS_Flow_Primary_Category_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>