unpackaged/main/default/objects/CS_Flow_Primary_Category_Setting__mdt/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>Access_Groups__c</columns>
    <columns>Countries__c</columns>
    <columns>CS_Flow_Picklist_Setting__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
    <language>en_US</language>
</ListView>